third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/default_and_catch_all_same_variant_alt.rs
#[derive(Debug, Eq, PartialEq, num_enum::FromPrimitive)]
#[repr(u8)]
enum Enum {
    Zero = 0,
    #[num_enum(catch_all)]
    #[num_enum(default)]
    NonZero(u8),
}

fn main() {}
