third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/default_and_catch_all_same_variant_alt.stderr
error: Attribute `default` is mutually exclusive with `catch_all`
 --> tests/try_build/compile_fail/default_and_catch_all_same_variant_alt.rs:6:16
  |
6 |     #[num_enum(default)]
  |                ^^^^^^^
